# StockCloud1

./: .replit  pyproject.toml  requirements.txt
artifacts/mockup-sandbox/: index.html
python-web/: .env.example  README.md  main.py  requirements.txt
python-web/app/models/: item.py
python-web/app/routes/: health.py  items.py
